--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="img">        
-            <img src="/imgs/negativo2.png" alt="Logo Arywebdesign negativa">
+            <img src="../imgs/negativo2.png" alt="Logo Arywebdesign negativa">
         </div>
         <div class="calculadora">
             <h2>Calculadora</h2>
