:ok_hand: Atualizando o estilo

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
     <main>
         <div class="img">        
-            <img src="imgs/negativo2.png" alt="Logo Arywebdesign negativa">
+            <img src="https://aryelanne.netlify.app/imgs/logo-aryelanne.svg" alt="Logo Arywebdesign negativa">
         </div>
         <div class="calculadora">
-            <h2>Calculadora</h2>
             <p id="resultado"></p>
             <table>
                 <tr>
